style: prevent related galleries overflow list view

--- a/packages/style/scss/cards.scss
+++ b/packages/style/scss/cards.scss
@@ -611,7 +611,7 @@
   .related-results {
     padding-left: 1rem;
 
-    @media (min-width: $bp-xxxl) {
+    @media (min-width: $bp-4k) {
       margin-left: $grid-gutter;
     }
   }
